--- a/views/user.hbs
+++ b/views/user.hbs
@@ -36,6 +36,13 @@
 						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 					</div>
 				{{/ifEquals}}
+                
+                 {{#ifEquals errcode "notLogged"}}
+							<div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+						 Please login/signup first to continue booking!
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				{{/ifEquals}}
 
 				{{#ifEquals errcode "notExist"}}
 							<div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
