--- a/views/about.hbs
+++ b/views/about.hbs
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="images/logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
+                <img src="images/logo.jpg" href="/" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -25,13 +25,13 @@
                     <a class="nav-link" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="about">About</a>
+                    <a class="nav-link" aria-current="page" href="/about">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="rooms">Rooms</a>
+                    <a class="nav-link" href="/rooms">Rooms</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
                  {{#if removedUser}}
