--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -40,7 +40,7 @@
     <div class="row">
         <div class="col-md-4 order-md-2 mb-4">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
-                <span style="color: black;">YOUR BOOKING</span>
+                <span style="color: black;">YOUR BOOKING DETAILS</span>
             </h4>
             <br>
             <ul class="list-group mb-3 sticky-top">
@@ -48,40 +48,46 @@
                     <div>
                         <h6 class="my-0">Check-in Date</h6>
                     </div>
-                    <span>19/8/21</span>
+                    <span>{{det.cin}}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                     <div>
                         <h6 class="my-0">Check-out Date</h6>
                     </div>
-                    <span>20/8/21</span>
+                    <span>{{det.cout}}</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between bg-light">
+                    <div>
+                        <h6 class="my-0">Room type</h6>
+                    </div>
+                    <span>{{book}}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                     <div>
                         <h6 class="my-0">Number of guests</h6>
                     </div>
-                    <span>3</span>
+                    <span>{{guestC}}</span>
                 </li>
                 <li class="list-group-item d-flex justify-content-between bg-light">
                     <div>
                         <h6 class="my-0">Number of rooms</h6>
                     </div>
-                    <span>2</span>
+                    <span>{{det.rooms}}</span>
                 </li>
             </ul>
         </div>
         <div class="col-md-8 order-md-1">
             <center><h4 class="mb-3">BOOKING CONFIRMATION</h4></center>
-            <form class="needs-validation" novalidate="">
+            <form class="needs-validation" novalidate="" method="POST" action="/bookingConfirmation">
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        <label for="firstName">First name</label>
-                        <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                        <label for="firstName">Name</label>
+                        <input name="fname" type="text" class="form-control" id="firstName" placeholder="Enter Name here" value="" required="">
                         <div class="invalid-feedback"> Valid first name is required. </div>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <label for="lastName">Last name</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                        <label for="lastName">Age</label>
+                        <input name="age" type="text" class="form-control" id="lastName" placeholder="Enter Age Here" value="" required="">
                         <div class="invalid-feedback"> Valid last name is required. </div>
                     </div>
                 </div>
@@ -91,16 +97,22 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">@</span>
                         </div>
-                        <input type="text" class="form-control" id="username" placeholder="Username" required="">
+                        <input type="hidden" name="rno" value="{{unm}}">
+                        <input type="text"  class="form-control" id="username" placeholder="Enter Student Roll Number Here" value="{{unm}}" required="" disabled>
                         <div class="invalid-feedback" style="width: 100%;"> Your username is required. </div>
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="email">Email<span class="text-muted"></span></label>
-                    <input type="email" class="form-control" id="email" placeholder="you@example.com" required="">
+                    <label for="email" >Email<span class="text-muted"></span></label>
+                    <input type="email" name="email" class="form-control" id="email" placeholder="name_rollno@nitc.ac.in" required="">
                     <div class="invalid-feedback"> Please enter a valid email address</div>
                 </div>
-                <h4 class="mb-3">Payment</h4>
+                <input type="hidden" name="roomid" value="{{roomid}}">
+                <div class="mb-3">
+                    <label for="Mobile">Mobile<span class="text-muted"></span></label>
+                    <input type="text" name="mob" maxlength="10" class="form-control" id="Mobile" placeholder="Enter Mobile Number" required="">
+                </div>
+                {{!-- <h4 class="mb-3">Payment</h4>
                 <div class="d-block my-3">
                     <div class="custom-control custom-radio">
                         <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" >
@@ -114,8 +126,8 @@
                         <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" >
                         <label class="custom-control-label" for="paypal">PayPal</label>
                     </div>
-                </div>
-                <div class="row">
+                </div> --}}
+                {{!-- <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="cc-name">Name on card</label>
                         <input type="text" class="form-control" id="cc-name" placeholder="" >
@@ -127,8 +139,8 @@
                         <input type="text" class="form-control" id="cc-number" placeholder="" >
                         <div class="invalid-feedback"> Credit card number is required </div>
                     </div>
-                </div>
-                <div class="row">
+                </div> --}}
+                {{!-- <div class="row">
                     <div class="col-md-3 mb-3">
                         <label for="cc-expiration">Expiration</label>
                         <input type="text" class="form-control" id="cc-expiration" placeholder="" >
@@ -139,13 +151,27 @@
                         <input type="text" class="form-control" id="cc-cvv" placeholder="" >
                         <div class="invalid-feedback"> Security code required </div>
                     </div>
-                </div>
-                <br>
+                </div> --}}
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="roomAmount">Amount/Room</label>
+                        <input type="hidden"  name="amt" value="{{amount}}">
+                        <input type="text"  class="form-control" id="roomAmount"  value="{{amount}}"  disabled>
+                        <div class="invalid-feedback"> Valid last name is required. </div>
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                        <label for="amount">Payable Amount</label>
+                        <input type="hidden"  name="tamt" value="{{mult det.rooms amount}}">
+                        <input type="text" class="form-control" value="{{mult det.rooms amount}}"  disabled>
+                    </div>
+                <br> <br>
+            
+                <center><button class="btn btn-primary btn-lg btn-block active" type="submit">CONFIRM BOOKING</button></center>
             </form>
         </div>
     </div>
 </div>
-<center><button onclick="func()" class="btn btn-primary btn-lg btn-block" type="submit">PAY NOW</button></center>
 <br>
 <br>
 </body>
