--- a/views/bookingConfirmation.hbs
+++ b/views/bookingConfirmation.hbs
@@ -38,19 +38,45 @@
                                         <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                             <tr>
                                                 <td width="75%" align="left" bgcolor="#eeeeee" style="font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px;"> Booking Confirmation # </td>
-                                                <td width="25%" align="left" bgcolor="#eeeeee" style="font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px;"> 2345678 </td>
+                                                <td width="25%" align="left" bgcolor="#eeeeee" style="font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px;"> {{rows.insertId}} </td>
+                                            </tr>
+                                             <tr>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> CheckIn </td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> {{det.cin}}</td>
+                                            </tr>
+                                             <tr>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> Checkout </td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> {{det.cout}}</td>
                                             </tr>
                                             <tr>
                                                 <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> Number of rooms </td>
-                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> 2</td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 15px 10px 5px 10px;"> {{det.rooms}}</td>
                                             </tr>
                                             <tr>
-                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Room Charges </td>
-                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> $10.00 </td>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Room Charge </td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Rs.{{amt}} </td>
+                                            </tr>
+                                             <tr>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Name </td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> {{fname}} </td>
+                                            </tr>
+                                             <tr>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Email</td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> {{email}} </td>
+                                            </tr>
+                                             <tr>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Mobile Number</td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> {{mob}} </td>
                                             </tr>
                                             <tr>
-                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Tax </td>
-                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> $5.00 </td>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Roll No.</td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> {{rno}} </td>
+                                            </tr>
+                                             <tr>
+                                                <td width="75%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> Age </td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 400; line-height: 24px; padding: 5px 10px;"> {{age}} </td>
+                                            </tr>
+                                            <tr>
                                             </tr>
                                         </table>
                                     </td>
@@ -60,7 +86,7 @@
                                         <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                             <tr>
                                                 <td width="75%" align="left" style="font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;"> TOTAL </td>
-                                                \<td width="25%" align="left" style="font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;"> $115.00 </td>
+                                                <td width="25%" align="left" style="font-size: 16px; font-weight: 800; line-height: 24px; padding: 10px; border-top: 3px solid #eeeeee; border-bottom: 3px solid #eeeeee;"> Rs.{{tamt}} </td>
                                             </tr>
                                         </table>
                                     </td>
