--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -8,6 +8,8 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <style>
     body{
@@ -52,6 +54,12 @@
 	}
 </style>
 <body>
+	{{#if subm}}
+        <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+                Thank you, your feedback has been submitted successfully!   
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {{/if}}
 
 <div class="container contact">
 	<div class="row">
@@ -64,28 +72,29 @@
 		</div>
 		<div class="col-md-9">
 			<div class="contact-form">
+				<form method="POST" action="/contact">
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="fname">First Name:</label>
 				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
+					<input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname" required  >
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="lname">Last Name:</label>
 				  <div class="col-sm-10">          
-					<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+					<input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname" required>
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="email">Email:</label>
 				  <div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+					<input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="comment">Feedback:</label>
 				  <div class="col-sm-10">
-					<textarea class="form-control" rows="4" id="comment"></textarea>
+					<textarea class="form-control" rows="4" name="feedback" placeholder="Enter feedback" id="comment" required></textarea>
 				  </div>
 				</div>
                 <br>
@@ -94,6 +103,7 @@
 					<center><button type="submit" class="btn btn-primary">Submit</button></center>
 				  </div>
 				</div>
+				</form>
 			</div>
 		</div>
 	</div>
